--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-<title>A Question I’ve Been Carrying</title>
+<title>For My Forever ❤️</title>
 
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 
 <style>
-:root {
+:root{
   --bg1:#ffd6e7;
   --bg2:#ffeef6;
-  --card:#ffffffcc;
+  --card:#ffffffdd;
   --yes:#ff3b7a;
   --yesHover:#ff1f68;
 }
@@ -29,35 +29,67 @@ body{
   padding:16px;
 }
 
+/* Floating Hearts Layer */
+.hearts{
+  position:fixed;
+  inset:0;
+  overflow:hidden;
+  pointer-events:none;
+  z-index:0;
+}
+
+.heart{
+  position:absolute;
+  bottom:-40px;
+  opacity:.75;
+  animation:floatUp linear forwards;
+  will-change:transform,opacity;
+}
+
+@keyframes floatUp{
+  from{
+    transform:translateY(0) scale(.8) rotate(0deg);
+    opacity:.9;
+  }
+  to{
+    transform:translateY(-110vh) scale(1.4) rotate(360deg);
+    opacity:0;
+  }
+}
+
+/* Confetti Canvas */
 #confettiCanvas{
   position:fixed;
   inset:0;
   width:100vw;
   height:100vh;
   pointer-events:none;
-  z-index:9999;
+  z-index:5;
 }
 
 .card{
+  position:relative;
+  z-index:10;
   width:min(720px,92vw);
-  padding:32px 26px;
+  padding:34px 26px;
   background:var(--card);
-  backdrop-filter:blur(10px);
-  border-radius:22px;
+  backdrop-filter:blur(12px);
+  border-radius:24px;
   text-align:center;
-  box-shadow:0 18px 60px rgba(0,0,0,.15);
+  box-shadow:0 20px 70px rgba(0,0,0,.18);
 }
 
 h1{
-  font-size:clamp(26px,4vw,40px);
-  margin:12px 0;
+  font-size:clamp(24px,5vw,38px);
+  margin:12px 0 18px;
   line-height:1.4;
 }
 
 .story{
-  font-size:17px;
+  font-size:16px;
   opacity:.85;
-  margin-bottom:20px;
+  margin-bottom:24px;
+  line-height:1.6;
 }
 
 .button-zone{
@@ -72,15 +104,15 @@ button{
   position:absolute;
   top:50%;
   transform:translateY(-50%);
-  padding:16px 26px;
-  font-size:18px;
+  padding:14px 24px;
+  font-size:16px;
   font-weight:800;
   border-radius:999px;
   border:none;
   cursor:pointer;
   box-shadow:0 10px 24px rgba(0,0,0,.14);
   user-select:none;
-  transition:transform .12s ease,background .12s ease;
+  transition:transform .15s ease,background .15s ease;
 }
 
 #yesBtn{
@@ -89,7 +121,13 @@ button{
   color:#fff;
 }
 
-#yesBtn:hover{background:var(--yesHover)}
+#yesBtn:active{
+  transform:translateY(-50%) scale(1.08);
+}
+
+#yesBtn:hover{
+  background:var(--yesHover);
+}
 
 #noBtn{
   left:62%;
@@ -99,28 +137,29 @@ button{
 
 .hint{
   margin-top:10px;
-  font-size:13px;
+  font-size:12px;
   opacity:.7;
 }
 
 .result{
   display:none;
-  margin-top:18px;
-  animation:pop .35s ease;
+  margin-top:20px;
+  animation:pop .4s ease;
 }
 
 .result h2{
-  font-size:clamp(30px,4.5vw,46px);
+  font-size:clamp(26px,6vw,42px);
   margin:12px 0;
 }
 
 .result p{
-  font-size:18px;
-  margin-bottom:10px;
+  font-size:16px;
+  margin-bottom:12px;
+  line-height:1.6;
 }
 
 @keyframes pop{
-  from{transform:scale(.96);opacity:0}
+  from{transform:scale(.95);opacity:0}
   to{transform:scale(1);opacity:1}
 }
 </style>
@@ -128,44 +167,60 @@ button{
 
 <body>
 
+<div class="hearts" id="hearts"></div>
 <canvas id="confettiCanvas"></canvas>
 
 <main class="card">
 
 <h1>
-I wasn’t searching for forever…<br>
-but life quietly walked me to you.
+I didn’t plan to fall in love… <br>
+I just kept choosing you every single day.
 </h1>
 
 <p class="story">
-Somewhere between random talks, late-night laughs,  
-and those “did you eat?” messages…  
-you became my calm in chaos,  
-my safest place, my person.
+We started with simple conversations — no promises, no expectations.
+
+But slowly you became the person I tell everything to.
+My first call when something good happens.
+My comfort when things feel heavy.
+
+Between random jokes, late night talks,
+and caring about each other without saying it…
+
+you stopped being part of my life
+and became my home.
 </p>
 
 <section class="button-zone" id="zone">
-  <button id="yesBtn">Yes, Always ❤️</button>
-  <button id="noBtn">Let me try saying no</button>
+  <button id="yesBtn">Yes… it’s always you ❤️</button>
+  <button id="noBtn">I need to think 🤭</button>
 </section>
 
 <div class="hint" id="hint">
-Careful… that button gets nervous around commitment 👀
+Careful… running away won’t work this time 😌
 </div>
 
 <section class="result" id="result">
-  <h2>This is where our forever begins 💍</h2>
+  <h2>So here’s my promise 💍</h2>
   <p>
-Not just love for today…  
-but for every boring Monday, every sleepy Sunday,  
-every small fight and every big dream.
+Not just loving you on the happy days,
+but on the silent days, the stressful days,
+and even on the days we don’t fully understand each other.
+
+I promise to stay.
+To listen.
+To grow with you.
+And to keep choosing you —
+again and again — forever.
   </p>
+
   <h2>Will you marry me?</h2>
 </section>
 
 </main>
 
 <script>
+/* Confetti Setup */
 const zone=document.getElementById("zone");
 const yesBtn=document.getElementById("yesBtn");
 const noBtn=document.getElementById("noBtn");
@@ -184,32 +239,49 @@ window.addEventListener("resize",resizeCanvas);
 const confettiInstance=confetti.create(confettiCanvas,{resize:false,useWorker:true});
 
 function fireConfetti(){
-  const end=Date.now()+1600;
-  (function frame(){
-    confettiInstance({
-      particleCount:12,
-      spread:90,
-      startVelocity:45,
-      ticks:180,
-      origin:{x:Math.random(),y:Math.random()*0.3}
-    });
-    if(Date.now()<end)requestAnimationFrame(frame);
-  })();
-
-  setTimeout(()=>{
-    confettiInstance({
-      particleCount:300,
-      spread:140,
-      startVelocity:60,
-      ticks:220,
-      origin:{x:0.5,y:0.55}
-    });
-  },300);
+  confettiInstance({
+    particleCount:350,
+    spread:140,
+    startVelocity:65,
+    ticks:250,
+    origin:{x:0.5,y:0.6}
+  });
 }
 
+/* Floating Hearts (Mobile Optimized) */
+const heartsContainer=document.getElementById("hearts");
+let heartCount=0;
+const MAX_HEARTS=18;
+
+function createHeart(){
+  if(heartCount>=MAX_HEARTS) return;
+
+  const heart=document.createElement("div");
+  heart.className="heart";
+  heart.innerHTML="💖";
+
+  const size=14+Math.random()*22;
+  heart.style.left=Math.random()*100+"vw";
+  heart.style.fontSize=size+"px";
+
+  const duration=7+Math.random()*4;
+  heart.style.animationDuration=duration+"s";
+
+  heartsContainer.appendChild(heart);
+  heartCount++;
+
+  setTimeout(()=>{
+    heart.remove();
+    heartCount--;
+  },duration*1000);
+}
+
+setInterval(createHeart,800);
+
+/* No Button Movement */
 let yesScale=1;
 function growYes(){
-  yesScale=Math.min(2.2,yesScale+0.1);
+  yesScale=Math.min(2.3,yesScale+0.12);
   yesBtn.style.transform=`translateY(-50%) scale(${yesScale})`;
 }
 
@@ -224,8 +296,8 @@ function moveNo(px,py){
   let mag=Math.hypot(dx,dy)||1;
   dx/=mag; dy/=mag;
 
-  let newLeft=(b.left-z.left)+dx*150;
-  let newTop=(b.top-z.top)+dy*150;
+  let newLeft=(b.left-z.left)+dx*120;
+  let newTop=(b.top-z.top)+dx*120;
 
   newLeft=clamp(newLeft,0,z.width-b.width);
   newTop=clamp(newTop,0,z.height-b.height);
@@ -243,11 +315,12 @@ zone.addEventListener("pointermove",e=>{
     (b.left+b.width/2)-e.clientX,
     (b.top+b.height/2)-e.clientY
   );
-  if(d<140)moveNo(e.clientX,e.clientY);
+  if(d<130)moveNo(e.clientX,e.clientY);
 });
 
 noBtn.addEventListener("click",e=>e.preventDefault());
 
+/* YES CLICK */
 yesBtn.addEventListener("click",()=>{
   zone.style.display="none";
   hint.style.display="none";
@@ -257,7 +330,7 @@ yesBtn.addEventListener("click",()=>{
 
   setTimeout(()=>{
     alert("You just unlocked lifetime subscription to Alok ❤️");
-  },1800);
+  },1600);
 });
 </script>
 
